zeit.cms changes
================

1.34 (unreleased)
-----------------

- Site-Steuerung checkt nicht mehr aus.


1.33.3 (2009-09-16)
-------------------

- Der Workflow loggt wofür Zeit verbraucht wird. Ziel ist das Veröffentlichen
  zu beschleunigen.


1.33.2 (2009-09-14)
-------------------

- UUID-Lookup ist robuster gegen nicht vorhandene Objekte (#5734).


1.33.1 (2009-09-11)
-------------------

- Date-Last-Modified, Last-Semantic-Change, Date-First-Released und
  Date-Last-Published zur XML-Referenz wieder entfernt. Dies wird explizit in
  CPs eingebaut.


1.33 (2009-09-09)
-----------------

- Zurückziehen zieht abhängige Objekte nicht mehr mit zurück.

- Publish- und RetractEvents haben jetzt Informationen über das Objekt, das der
  Benutzer veröffentlichen/zurückziehen wollte.


1.32.1 (2009-09-06)
-------------------

- ObjectPathAttributeProperty kann jetzt ``None`` speichern, ohne "None" als
  Text zu produzieren.


1.32 (2009-09-05)
-----------------

- Site-Steuerung vor Dateiverwaltung (#6159).

- Kurz-Teaser und Homepage-Teaser gibt es nicht mehr (#6161).

- XMLReferenzen beinhalten keine Relateds mehr.

1.31.2 (2009-08-31)
-------------------

- Bessere Fehlerbeschreibung, wenn Bildergruppen referenziert werden, die
  plötzlich keine Bildergruppen mehr sind (#6137).


1.31.1 (2009-08-31)
-------------------

- Metadaten von Bildern in den bearbeiteten Dokumenten gehen nicht mehr kaputt,
  wenn das Bild gelöscht wurde (#6132).


1.31 (2009-08-27)
-----------------

- Neues Feld »Banner-Id« (#6088).

- Neue Optionen »Content« und »Countings« (#6104).


1.30 (2009-08-26)
-----------------

- XML-RPC-Methode ``retract`` um veröffentlichte Inhalte zurückzuziehen
  (#6071).

- »Erstes Related als Box« versteckt (nur Vivi-Skin, #6076).

- Bilder innerhalb von Bildergruppen „erben“ die Metadaten der Bildergruppe,
  bis die Metadaten des Bildes bearbeitet wurden, bzw. das Bild eingecheckt
  wurde (#6073).
